# launchd-test

./: CMakeLists.txt
agent/: CMakeLists.txt  main.cpp
exe1/: CMakeLists.txt  main.cpp
exe2/: CMakeLists.txt  main.cpp
setup/: kr.itst.exe1.plist  kr.itst.exe2.plist  kr.itst.prs5agent.plist  kr.itst.prs5updater.plist
updater/: CMakeLists.txt  main.cpp
